# UVCCamera

./: build.gradle  config.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
libuvccamera/: CMakeLists.txt  build.gradle
libuvccamera/src/androidTest/java/com/laotie/uvccamera/: ExampleInstrumentedTest.java
libuvccamera/src/main/: AndroidManifest.xml
libuvccamera/src/main/cpp/: context.cpp  context.h  jni.cpp  localdefines.h  mid_exceptions.cpp  mid_exceptions.h  mtc_log.h  utilbase.cpp  utilbase.h
libuvccamera/src/main/cpp/UVCCamera/: CMakeLists.txt  Parameters.cpp  UVCButtonCallback.cpp  UVCCamera.cpp  UVCCamera.h  UVCPreview.cpp  UVCPreview.h  UVCStatusCallback.cpp  libUVCCamera.h  objectarray.h
libuvccamera/src/main/cpp/UVCCamera/pipeline/: CaptureBasePipeline.cpp  SQLiteBufferedPipeline.cpp
libuvccamera/src/main/cpp/libjpeg-turbo-1.5.0/: Android.mk  cjpeg.c  djpeg.c  jccolor.c  jchuff.c  jcmaster.c  jdapimin.c  jdcolor.c  jdhuff.h  jdinput.c  jdmarker.c  jdmerge.c  jinclude.h  jpeglib.h
libuvccamera/src/main/cpp/libjpeg-turbo-1.5.0/android/: CMakeLists.txt
libuvccamera/src/main/cpp/libusb/android/jni/: CMakeLists.txt  libusb.mk
libuvccamera/src/main/cpp/libusb/libusb/: config.h  core.c  descriptor.c  io.c  libusb.h  libusbi.h  sync.c
libuvccamera/src/main/cpp/libusb/libusb/os/: android_usbfs.c
libuvccamera/src/main/cpp/libuvc/android/jni/: CMakeLists.txt
libuvccamera/src/main/cpp/libuvc/include/libuvc/: libuvc.h  libuvc_config.h  libuvc_internal.h
libuvccamera/src/main/cpp/libuvc/src/: device.c  frame-mjpeg.c  init.c  stream.c
libuvccamera/src/main/java/com/laotie/uvccamera/: CameraDialog.java  DeviceFilter.java  IButtonCallback.java  IFrameCallback.java  IStatusCallback.java  Size.java  USBMonitor.java  USBVendorId.java  UVCCamera.java
libuvccamera/src/main/java/com/laotie/uvccamera/util/: BuildCheck.java  GlobalVariables.java  HandlerThreadHandler.java
libuvccamera/src/main/java/com/serenegiant/usb/: CameraDialog.java  IFrameCallback.java  USBMonitor.java  UVCCamera.java
libuvccamera/src/main/jni/: Application.mk
libuvccamera/src/main/jni/UVCCamera/: UVCCamera.cpp  UVCCamera.h  UVCPreview.cpp  UVCPreview.h  serenegiant_usb_UVCCamera.cpp
libuvccamera/src/main/jni/libjpeg-turbo-1.5.0/: Android.mk  jcmarker.c  jdapimin.c  jdinput.c  jdmarker.c  jpeglib.h
libuvccamera/src/main/jni/libuvc/src/: frame-mjpeg.c  stream.c
libuvccamera/src/test/java/com/laotie/uvccamera/: ExampleUnitTest.java
usbCameraCommon/: build.gradle
usbCameraCommon/src/main/java/com/laotie/encoder/: IAudioEncoder.java  IVideoEncoder.java  MediaAudioEncoder.java  MediaEncoder.java  MediaMuxerWrapper.java  MediaSurfaceEncoder.java  MediaVideoBufferEncoder.java  MediaVideoEncoder.java
usbCameraCommon/src/main/java/com/laotie/usbcameracommon/: AbstractUVCCameraHandler.java  CameraViewInterface.java  UVCCameraHandler.java  UVCCameraHandlerMultiSurface.java
usbCameraCommon/src/main/java/com/laotie/widget/: AspectRatioTextureView.java  UVCCameraTextureView.java
usbCameraTest/: build.gradle
usbCameraTest/src/main/: AndroidManifest.xml
usbCameraTest/src/main/java/com/laotie/usbcameratest/: AspectRatioViewInterface.java  MainActivity.java
usbCameraTest/src/main/java/com/laotie/usbcameratest/widget/: SimpleUVCCameraTextureView.java
usbCameraTest/src/main/res/layout/: activity_main.xml
usbCameraTest0/: build.gradle
usbCameraTest0/src/main/: AndroidManifest.xml
usbCameraTest0/src/main/java/com/laotie/usbcameratest0/: MainActivity.java
usbCameraTest0/src/main/res/layout/: activity_main.xml
usbCameraTest2/: build.gradle
usbCameraTest2/src/main/: AndroidManifest.xml
usbCameraTest2/src/main/java/com/laotie/usbcameratest2/: MainActivity.java
usbCameraTest2/src/main/java/com/laotie/video/: Encoder.java  SurfaceEncoder.java
usbCameraTest2/src/main/java/com/laotie/widget/: AspectRatioViewInterface.java  SimpleUVCCameraTextureView.java
usbCameraTest2/src/main/res/layout/: activity_main.xml
usbCameraTest3/: build.gradle
usbCameraTest3/src/main/: AndroidManifest.xml
usbCameraTest3/src/main/res/layout/: activity_main.xml  activity_main2.xml
usbCameraTest4/: build.gradle
usbCameraTest4/src/main/: AndroidManifest.xml
usbCameraTest5/: build.gradle
usbCameraTest5/src/main/: AndroidManifest.xml
usbCameraTest5/src/main/res/layout/: activity_main.xml
usbCameraTest6/: build.gradle
usbCameraTest6/src/main/: AndroidManifest.xml
usbCameraTest6/src/main/res/layout/: activity_main.xml
usbCameraTest7/: build.gradle
usbCameraTest7/src/main/: AndroidManifest.xml
usbCameraTest7/src/main/res/layout/: activity_main.xml
usbCameraTest8/: build.gradle
usbCameraTest8/src/main/: AndroidManifest.xml
usbCameraTest8/src/main/res/layout/: activity_main.xml
